# logcatui

./: .gitignore  Cargo.toml  LICENSE
src/: app.rs  display_data.rs  events.rs  log_table.rs  logentry.rs  loglevel.rs  main.rs  search.rs  styles.rs  text_utils.rs
src/search/: matches.rs  mod.rs  quick.rs  search.rs  state.rs
