[package]
name = "logcat_tui"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
fps_counter = "2.0.0"
num-traits = "0.2.14"
crossterm = "0.19"
tui = { version = "0.15", default_features = false, features = ['crossterm'] }
unicode-width = "0.1"
unicode-segmentation = "1.7"
clipboard = "0.5.0"
