[package]
name = "logcat_tui"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
clipboard = "0.5.0"
crossterm = "0.19"
fps_counter = "2.0.0"
lazy_static = "1.4.0"
num-traits = "0.2.14"
tui = { version = "0.15", default_features = false, features = ['crossterm'] }
unicode-segmentation = "1.7"
unicode-width = "0.1"
